# PandP_Hackathon

./: README.md
PandP_Hackathon/: README.md
PandP_Hackathon/tractor_app/: CMakeLists.txt  Main.qml  main.cpp
tractor_app/: CMakeLists.txt  Main.qml  main.cpp  tractor_app.qrc
tractor_app/Documents/: next_stories.docx
tractor_app/Forms/: loginpage.cpp  loginpage.h  loginpage.ui
tractor_app/MyUI/: PassCode.qml
tractor_app/Sources/: main.cpp
tractor_app/qml/: LoginPage.qml  Main.qml
